docs: Chapter 09を実際のファイル構造に基づく解説に全面改訂
- Part 1-2を完全に書き直し（実際のplatform-landing-zone.auto.tfvarsと変数置換システムを解説）
- 実際のファイルの行番号を示してわかりやすく解説
- v2ファイルを本番ファイルに統合

--- a/docs-site/docs/09_管理リソース.md
+++ b/docs-site/docs/09_管理リソース.md
@@ -1,190 +1,190 @@
-# Chapter 09: 管理リソース（Log Analytics、DCR、Managed Identity）
+# 09. 管理リソース - Log AnalyticsとDCRの完全解説
 
 !!! info "この章で学ぶこと"
-    管理リソースの全体像を完全理解します：
+    管理リソース（Log Analytics、Data Collection Rules、Managed Identity）の実装を完全に理解します：
 
-    1. Log Analytics Workspace、DCR、Managed Identityの役割
-    2. platform-landing-zone.auto.tfvarsの設定解説
-    3. modules/management_resources/内部実装
-    4. Azure/avm-ptn-alz-management公式モジュール完全解説
-    5. Data Collection Rules（DCR）の3種類詳細
-    6. 実践：カスタムDCRの追加方法
+    1. 実際の設定ファイル（platform-landing-zone.auto.tfvars）の構造
+    2. 変数置換システム（`$${variable_name}`）の仕組み
+    3. main.management.tfからモジュール呼び出しの流れ
+    4. modules/management_resources/の解説（ローカルモジュール）
+    5. 公式モジュール（Azure/avm-ptn-alz-management）の内部構造
+    6. 全体フロー図（設定→リソース作成まで）
+    7. 実践パターン（カスタマイズ方法）
 
 ---
 
-## Part 1: 設定ファイルの解説（platform-landing-zone.auto.tfvars）
+## Part 1: 設定ファイル（platform-landing-zone.auto.tfvars）の実際
 
-`platform-landing-zone.auto.tfvars`の`management_resource_settings`ブロックを見ていこう。
+ここからも**実際のファイル**を見ていくよ。
 
 ### management_resource_settings
 
-```hcl title="管理リソースの設定"
+[platform-landing-zone.auto.tfvars](../platform-landing-zone.auto.tfvars#L185-L250)を開いてみよう。185行目から250行目あたりに管理リソースの設定が書いてある。
+
+```hcl title="platform-landing-zone.auto.tfvars"
 management_resource_settings = {
-  location                     = "japaneast"
-  log_analytics_workspace_name = "law-management-japaneast"
-  resource_group_name          = "rg-management"
-  
-  user_assigned_managed_identities = {
-    ama = {
-      name = "id-ama-japaneast"
+  enabled = true
+
+  location = "$${starter_location_01}"
+
+  # Names for the management resources (optional)
+  automation_account_name      = null
+  log_analytics_workspace_name = "$${log_analytics_workspace_name}"
+  resource_group_name          = "$${management_resource_group_name}"
+
+  # Data collection rules (optional)
+  data_collection_rules = {
+    change_tracking = {
+      name = "$${dcr_change_tracking_name}"
+    }
+    vm_insights = {
+      name = "$${dcr_vm_insights_name}"
+    }
+    defender_sql = {
+      name = "$${dcr_defender_sql_name}"
     }
   }
-  
-  data_collection_rules = {
-    change_tracking = { name = "dcr-change-tracking" }
-    defender_sql    = { name = "dcr-defender-sql" }
-    vm_insights     = { name = "dcr-vm-insights" }
+
+  # User Assigned Managed Identity for Azure Monitor Agent (optional)
+  user_assigned_managed_identities = {
+    ama = {
+      name = "$${ama_user_assigned_managed_identity_name}"
+    }
+  }
+
+  # Log Analytics Solutions (optional)
+  log_analytics_solution_plans = [
+    {
+      product   = "OMSGallery/ContainerInsights"
+      publisher = "Microsoft"
+    }
+  ]
+
+  # Log Analytics Workspace settings (optional)
+  log_analytics_workspace_allow_resource_only_permissions    = true
+  log_analytics_workspace_cmk_for_query_forced               = null
+  log_analytics_workspace_daily_quota_gb                     = null
+  log_analytics_workspace_internet_ingestion_enabled         = true
+  log_analytics_workspace_internet_query_enabled             = true
+  log_analytics_workspace_local_authentication_enabled       = true
+  log_analytics_workspace_reservation_capacity_in_gb_per_day = null
+  log_analytics_workspace_retention_in_days                  = null
+  log_analytics_workspace_sku                                = null
+
+  # Sentinel (SIEM/SOAR) settings (optional)
+  sentinel_onboarding = null
+
+  # Tags (optional)
+  tags = null
+
+  # Timeouts (optional)
+  timeouts = null
+}
+```
+
+**ここがポイント！**
+
+見てわかるように、ほとんどの値が**`$${変数名}`**という形式になってる。これは**変数置換システム**だよ。
+
+### 変数置換システムの仕組み
+
+```text title="変数置換の流れ"
+platform-landing-zone.auto.tfvars
+↓
+management_resource_settings = {
+  location = "$${starter_location_01}"  ←プレースホルダー
+  log_analytics_workspace_name = "$${log_analytics_workspace_name}"
+  resource_group_name = "$${management_resource_group_name}"
+  ...
+}
+↓
+main.config.tf
+  module "config-templating" {
+    custom_replacements = {
+      starter_location_01 = "japaneast"
+      log_analytics_workspace_name = "law-mgmt-japaneast-001"
+      management_resource_group_name = "rg-mgmt-japaneast-001"
+      ...
+    }
+  }
+↓
+config-templatingモジュールが$${...}を実際の値に置換
+↓
+locals.tf
+  local.management_resource_settings = {
+    location = "japaneast"  ←置換後
+    log_analytics_workspace_name = "law-mgmt-japaneast-001"
+    resource_group_name = "rg-mgmt-japaneast-001"
+    ...
+  }
+```
+
+**なぜこんなことするの？**
+
+- 環境ごとに異なる名前を簡単に管理できる
+- `custom_replacements`を変えるだけで全体の設定を変更できる
+- テンプレートとして再利用しやすい
+
+### 実際の変数定義（custom_replacements.names）
+
+同じ[platform-landing-zone.auto.tfvars](../platform-landing-zone.auto.tfvars#L41-L80)ファイルの41行目から80行目あたりを見てみよう。
+
+```hcl title="platform-landing-zone.auto.tfvars（custom_replacements.names）"
+custom_replacements = {
+  names = {
+    # Management resources
+    ama_user_assigned_managed_identity_name = "id-ama-$${starter_location_01}"
+    dcr_change_tracking_name                = "dcr-change-tracking-$${starter_location_01}"
+    dcr_defender_sql_name                   = "dcr-defender-sql-$${starter_location_01}"
+    dcr_vm_insights_name                    = "dcr-vm-insights-$${starter_location_01}"
+    log_analytics_workspace_name            = "law-management-$${starter_location_01}"
+    management_resource_group_name          = "rg-management-$${starter_location_01}"
+
+    # Locations
+    starter_location_01 = "japaneast"
+    starter_location_02 = "japanwest"
+    
+    # ... その他の変数
   }
 }
 ```
 
 **何してる？**
 
-管理リソース（Log Analytics、DCR、Managed Identity）の設定を1つのオブジェクトにまとめてる。
+ここで実際の値を定義してる。例えば：
 
-#### location
+- `starter_location_01 = "japaneast"`
+- `log_analytics_workspace_name = "law-management-japaneast"`（これも`$${starter_location_01}`を含む）
 
-```hcl title="管理リソースのデプロイ先"
-location = "japaneast"
-```
+**置換の多段階処理**：
 
-**何してる？**
+```text title="多段階置換の例"
+最初の定義：
+log_analytics_workspace_name = "law-management-$${starter_location_01}"
 
-Log Analyticsワークスペースとその関連リソースを作る場所。
-
-**重要**：
-
-- 監視対象のリソースとは別のリージョンでもOK
-- ただしデータ転送コストを考えると、監視対象と同じリージョンが一般的
-
-#### log_analytics_workspace_name
-
-```hcl title="Log Analyticsワークスペース名"
+1回目の置換（starter_location_01 = "japaneast"）：
 log_analytics_workspace_name = "law-management-japaneast"
+
+最終的な値：
+"law-management-japaneast"
 ```
 
-**何してる？**
-
-Log Analyticsワークスペースの名前を指定してる。
-
-**命名規則**：
-
-- `law-`：Log Analytics Workspaceの略
-- `management`：用途（管理リソース）
-- `japaneast`：場所
-
-#### resource_group_name
-
-```hcl title="リソースグループ名"
-resource_group_name = "rg-management"
-```
-
-**何してる？**
-
-管理リソース用のリソースグループ名を指定してる。
-
-**このRGの中に入るもの**：
-
-- Log Analytics Workspace
-- Data Collection Rules（3つ）
-- User Assigned Managed Identity
-
-#### user_assigned_managed_identities
-
-```hcl title="ユーザー割り当てManaged Identity"
-user_assigned_managed_identities = {
-  ama = {
-    name = "id-ama-japaneast"
-  }
-}
-```
-
-**何してる？**
-
-Azure Monitor Agent（AMA）用のManaged Identityを定義してる。
-
-**AMAって何？**
-
-VMにインストールするエージェント。ログやメトリクスを収集してLog Analyticsに送る。
-
-**Managed Identityの役割**：
-
-```text title="AMAの認証フロー"
-VM（AMA付き）
-  ↓ Managed Identityで認証
-Log Analytics Workspace
-  ↓ ログ送信
-ログが保存される
-```
-
-パスワード不要で認証できるのが便利。VMを作るたびにパスワード設定しなくていい。
-
-#### data_collection_rules
-
-```hcl title="データ収集ルール（DCR）の定義"
-data_collection_rules = {
-  change_tracking = { name = "dcr-change-tracking" }
-  defender_sql    = { name = "dcr-defender-sql" }
-  vm_insights     = { name = "dcr-vm-insights" }
-}
-```
-
-**何してる？**
-
-3種類のData Collection Rule（DCR）を定義してる。
-
-**3種類のDCR**：
-
-##### 1. change_tracking
-
-```text title="変更追跡の対象"
-「ファイルやレジストリの変更を追跡」
-```
-
-**使い道**：
-
-- 誰かがファイル削除した？
-- 設定変更された？
-- 不審なプログラムインストールされた？
-
-##### 2. defender_sql
-
-```text title="SQL Serverのセキュリティ監視"
-「SQL Serverのセキュリティログ収集」
-```
-
-**使い道**：
-
-- 不正アクセス検知
-- 脆弱性スキャン
-- コンプライアンス監査
-
-##### 3. vm_insights
-
-```text title="VMのパフォーマンス監視"
-「VMのパフォーマンスとヘルス監視」
-```
-
-**使い道**：
-
-- CPU使用率
-- メモリ使用率
-- ディスクI/O
-- ネットワーク帯域
+config-templatingモジュールが全ての`$${...}`を再帰的に置換してくれる。
 
 ---
 
-## Part 2: ローカルモジュール（modules/management_resources/）
+## Part 2: main.management.tfとモジュール構造
 
-`main.management.tf`から呼ばれるローカルモジュールを見ていこう。
+次は、実際のモジュール呼び出しを見ていこう。
 
-### main.management.tf での呼び出し
+### main.management.tfの実際
 
-```hcl title="管理リソースモジュールの呼び出し"
+[main.management.tf](../main.management.tf#L1-L50)を開いてみよう。
+
+```hcl title="main.management.tf（抜粋）"
 module "management_resources" {
   source = "./modules/management_resources"
-
-  count = var.management_resources_enabled ? 1 : 0
+  count  = var.management_resources_enabled ? 1 : 0
 
   enable_telemetry             = var.enable_telemetry
   management_resource_settings = local.management_resource_settings
@@ -197,18 +197,37 @@ module "management_resources" {
 
 **何してる？**
 
-- `count`で管理リソースの作成を制御
-- `local.management_resource_settings`を渡す
-- `azurerm.management`プロバイダを使ってManagementサブスクリプションに作成
+- **count**：`var.management_resources_enabled = true`なら作成、`false`ならスキップ
+- **source**：ローカルモジュール`./modules/management_resources`を呼び出し
+- **management_resource_settings**：置換済みの設定を渡す（`local.management_resource_settings`）
+- **providers**：管理サブスクリプション用のプロバイダを使用
 
-### modules/management_resources/main.tf
+**countパターンの動作**：
 
-```hcl title="公式モジュールの呼び出し"
+```text title="countによる条件付き作成"
+var.management_resources_enabled = true
+↓
+count = 1（モジュール実行）
+
+var.management_resources_enabled = false
+↓
+count = 0（モジュールスキップ）
+```
+
+### modules/management_resources/main.tfの実際
+
+[modules/management_resources/main.tf](../modules/management_resources/main.tf#L1-L30)を開いてみよう。
+
+```hcl title="modules/management_resources/main.tf"
 module "management_resources" {
   source  = "Azure/avm-ptn-alz-management/azurerm"
   version = "0.9.0"
-  
-  location                     = var.management_resource_settings.location
+
+  # Location (required)
+  location = var.management_resource_settings.location
+
+  # Resource names (optional, auto-generated if not specified)
+  automation_account_name      = null
   log_analytics_workspace_name = coalesce(
     var.management_resource_settings.log_analytics_workspace_name,
     "law-management-${var.management_resource_settings.location}"
@@ -217,89 +236,95 @@ module "management_resources" {
     var.management_resource_settings.resource_group_name,
     "rg-management-${var.management_resource_settings.location}"
   )
-  automation_account_name = coalesce(
-    var.management_resource_settings.automation_account_name,
-    "aa-management-${var.management_resource_settings.location}"
-  )
-  
-  data_collection_rules                = var.management_resource_settings.data_collection_rules
-  enable_telemetry                     = var.enable_telemetry
-  linked_automation_account_creation_enabled = false
-  log_analytics_solution_plans         = var.management_resource_settings.log_analytics_solution_plans
-  
-  log_analytics_workspace_allow_resource_only_permissions = var.management_resource_settings.log_analytics_workspace_allow_resource_only_permissions
-  log_analytics_workspace_cmk_for_query_forced           = var.management_resource_settings.log_analytics_workspace_cmk_for_query_forced
-  log_analytics_workspace_daily_quota_gb                 = var.management_resource_settings.log_analytics_workspace_daily_quota_gb
-  log_analytics_workspace_internet_ingestion_enabled     = var.management_resource_settings.log_analytics_workspace_internet_ingestion_enabled
-  log_analytics_workspace_internet_query_enabled         = var.management_resource_settings.log_analytics_workspace_internet_query_enabled
-  log_analytics_workspace_local_authentication_enabled   = var.management_resource_settings.log_analytics_workspace_local_authentication_enabled
-  log_analytics_workspace_reservation_capacity_in_gb_per_day = var.management_resource_settings.log_analytics_workspace_reservation_capacity_in_gb_per_day
-  log_analytics_workspace_retention_in_days              = var.management_resource_settings.log_analytics_workspace_retention_in_days
-  log_analytics_workspace_sku                            = var.management_resource_settings.log_analytics_workspace_sku
-  
-  resource_group_creation_enabled = true
-  sentinel_onboarding             = var.management_resource_settings.sentinel_onboarding
-  tags                            = var.management_resource_settings.tags
-  timeouts                        = var.management_resource_settings.timeouts
+
+  # Data Collection Rules
+  data_collection_rules = var.management_resource_settings.data_collection_rules
+
+  # User Assigned Managed Identities
   user_assigned_managed_identities = var.management_resource_settings.user_assigned_managed_identities
+
+  # Log Analytics Workspace settings
+  log_analytics_workspace_allow_resource_only_permissions    = var.management_resource_settings.log_analytics_workspace_allow_resource_only_permissions
+  log_analytics_workspace_cmk_for_query_forced               = var.management_resource_settings.log_analytics_workspace_cmk_for_query_forced
+  log_analytics_workspace_daily_quota_gb                     = var.management_resource_settings.log_analytics_workspace_daily_quota_gb
+  log_analytics_workspace_internet_ingestion_enabled         = var.management_resource_settings.log_analytics_workspace_internet_ingestion_enabled
+  log_analytics_workspace_internet_query_enabled             = var.management_resource_settings.log_analytics_workspace_internet_query_enabled
+  log_analytics_workspace_local_authentication_enabled       = var.management_resource_settings.log_analytics_workspace_local_authentication_enabled
+  log_analytics_workspace_reservation_capacity_in_gb_per_day = var.management_resource_settings.log_analytics_workspace_reservation_capacity_in_gb_per_day
+  log_analytics_workspace_retention_in_days                  = var.management_resource_settings.log_analytics_workspace_retention_in_days
+  log_analytics_workspace_sku                                = var.management_resource_settings.log_analytics_workspace_sku
+
+  # Log Analytics Solution Plans
+  log_analytics_solution_plans = var.management_resource_settings.log_analytics_solution_plans
+
+  # Sentinel onboarding
+  sentinel_onboarding = var.management_resource_settings.sentinel_onboarding
+
+  # Resource creation flags
+  resource_group_creation_enabled            = true
+  linked_automation_account_creation_enabled = false
+
+  # Tags and telemetry
+  tags             = var.management_resource_settings.tags
+  enable_telemetry = var.enable_telemetry
+
+  # Timeouts
+  timeouts = var.management_resource_settings.timeouts
 }
 ```
 
 **何してる？**
 
-Azure公式の`avm-ptn-alz-management`モジュールを呼び出してる。約25個のパラメータを渡している。
+このローカルモジュールは、公式モジュール`Azure/avm-ptn-alz-management/azurerm`を呼び出してる。
 
-**重要なパラメータ**：
+**重要なポイント**：
 
-- **location**：必須。管理リソースを作る場所
-- **log_analytics_workspace_name**：`coalesce`でデフォルト値を設定
-- **resource_group_name**：`coalesce`でデフォルト値を設定
-- **automation_account_name**：`coalesce`でデフォルト値を設定
-- **data_collection_rules**：3種類のDCRの設定
-- **user_assigned_managed_identities**：Managed Identityの設定
-- **linked_automation_account_creation_enabled**：`false`でAutomation Accountを作らない
-- **resource_group_creation_enabled**：`true`でRGも自動作成
+1. **coalesce関数でデフォルト値設定**：
+   ```hcl
+   log_analytics_workspace_name = coalesce(
+     var.management_resource_settings.log_analytics_workspace_name,
+     "law-management-${var.management_resource_settings.location}"
+   )
+   ```
+   - ユーザーが指定してれば、その値を使う
+   - 指定してなければ、自動生成（`law-management-japaneast`とか）
 
-#### coalesceの仕組み
+2. **公式モジュールへのパススルー**：
+   ```hcl
+   log_analytics_workspace_retention_in_days = var.management_resource_settings.log_analytics_workspace_retention_in_days
+   ```
+   - 設定ファイルの値を公式モジュールにそのまま渡す
 
-```hcl title="デフォルト値のフォールバック"
-log_analytics_workspace_name = coalesce(
-  var.management_resource_settings.log_analytics_workspace_name,
-  "law-management-${var.management_resource_settings.location}"
-)
-```
+3. **固定値の設定**：
+   ```hcl
+   resource_group_creation_enabled            = true  # 常に新規RG作成
+   linked_automation_account_creation_enabled = false # Automation Accountは作らない
+   ```
 
-**何してる？**
+### modules/management_resources/variables.tfの実際
 
-- 1つ目の値（ユーザー指定の名前）が`null`でなければそれを使う
-- `null`だったら2つ目の値（デフォルト名）を使う
+[modules/management_resources/variables.tf](../modules/management_resources/variables.tf#L1-L50)を開いてみよう。
 
-**例**：
+```hcl title="modules/management_resources/variables.tf（抜粋）"
+variable "enable_telemetry" {
+  type        = bool
+  default     = true
+  description = <<DESCRIPTION
+This variable controls whether or not telemetry is enabled for the module.
+For more information see <https://aka.ms/avm/telemetryinfo>.
+If it is set to false, then no telemetry will be collected.
+DESCRIPTION
+}
 
-```text title="coalesceの動作例"
-# ユーザーが名前を指定した場合
-log_analytics_workspace_name = "my-custom-law"
-↓
-結果：my-custom-law
-
-# ユーザーが名前を指定しなかった場合（null）
-log_analytics_workspace_name = null
-↓
-結果：law-management-japaneast
-```
-
-これで、ユーザーが名前を指定しなくても自動でいい感じの名前がつく。
-
-### modules/management_resources/variables.tf
-
-```hcl title="management_resource_settingsの型定義"
 variable "management_resource_settings" {
   type = object({
-    location                     = string
+    enabled  = optional(bool, true)
+    location = string
+
     automation_account_name      = optional(string)
     log_analytics_workspace_name = optional(string)
     resource_group_name          = optional(string)
-    
+
     data_collection_rules = optional(object({
       change_tracking = optional(object({
         enabled  = optional(bool, true)
@@ -321,12 +346,12 @@ variable "management_resource_settings" {
         enable_collection_of_sql_queries_for_security_research = optional(bool, false)
       }))
     }))
-    
+
     log_analytics_solution_plans = optional(list(object({
       product   = string
       publisher = optional(string)
     })))
-    
+
     log_analytics_workspace_allow_resource_only_permissions    = optional(bool, true)
     log_analytics_workspace_cmk_for_query_forced               = optional(bool)
     log_analytics_workspace_daily_quota_gb                     = optional(number)
@@ -336,14 +361,14 @@ variable "management_resource_settings" {
     log_analytics_workspace_reservation_capacity_in_gb_per_day = optional(number)
     log_analytics_workspace_retention_in_days                  = optional(number)
     log_analytics_workspace_sku                                = optional(string)
-    
+
     sentinel_onboarding = optional(object({
       name                         = optional(string)
       customer_managed_key_enabled = optional(bool)
     }))
-    
+
     tags = optional(map(string))
-    
+
     timeouts = optional(object({
       sentinel_onboarding = optional(object({
         create = optional(string)
@@ -358,7 +383,7 @@ variable "management_resource_settings" {
         read   = optional(string)
       }))
     }))
-    
+
     user_assigned_managed_identities = optional(object({
       ama = optional(object({
         enabled  = optional(bool)
@@ -368,7 +393,7 @@ variable "management_resource_settings" {
       }))
     }))
   })
-  
+
   description = <<DESCRIPTION
 Configuration settings for the management resources.
 
@@ -415,7 +440,7 @@ DESCRIPTION
 
 **何してる？**
 
-`management_resource_settings`の複雑なオブジェクト型を定義してる。約150行の定義。
+`management_resource_settings`という複雑なオブジェクト型を定義してる。
 
 **主要なフィールド**：
 
@@ -440,14 +465,15 @@ DESCRIPTION
 
 **ポイント**：
 
-1. **locationのみ必須**、他はoptional
-2. **自動生成される名前**：未指定なら`coalesce`で自動生成
-3. **デフォルト値**：`optional(bool, true)`の形式でデフォルト指定
-4. **ネストしたオブジェクト**：DCRやSentinelは複雑な構造
+- **locationのみ必須**、他はoptional
+- **デフォルト値**：`optional(bool, true)`の形式で指定
+- **ネストしたオブジェクト**：DCRやSentinelは複雑な構造
 
 ### modules/management_resources/outputs.tf
 
-```hcl title="モジュールのアウトプット"
+[modules/management_resources/outputs.tf](../modules/management_resources/outputs.tf)
+
+```hcl title="modules/management_resources/outputs.tf"
 output "management_resources" {
   description = "The management resources outputs."
   value       = module.management_resources
@@ -477,7 +503,6 @@ output "management_resources" {
 
 https://github.com/Azure/terraform-azurerm-avm-ptn-alz-management/tree/v0.9.0
 
-<!-- TODO: スクリーンショット追加 - GitHubリポジトリとVS Codeを並べて表示 -->
 
 ここからは公式のモジュールを開きながら見ていきましょう。GitHubで上記のリポジトリを開いて、コードと照らし合わせながら読むとわかりやすいです。
 
@@ -985,15 +1010,18 @@ Change Tracking DCRの詳細定義をしてる。
 **構成要素**：
 
 1. **dataSources**：どのデータを収集するか
-   - `extensions`：ChangeTracking-WindowsとChangeTracking-Linux拡張機能
-   - `streams`：収集するデータストリーム（設定変更、ファイル変更、インベントリデータ）
-   - `extensionSettings`：何を監視するか（ファイル、ソフトウェア、レジストリ、サービス）
+
+- `extensions`：ChangeTracking-WindowsとChangeTracking-Linux拡張機能
+- `streams`：収集するデータストリーム（設定変更、ファイル変更、インベントリデータ）
+- `extensionSettings`：何を監視するか（ファイル、ソフトウェア、レジストリ、サービス）
 
 2. **destinations**：データの送信先
-   - `logAnalytics`：Log Analyticsワークスペース
+
+- `logAnalytics`：Log Analyticsワークスペース
 
 3. **dataFlows**：データの流れ
-   - どのストリームをどの送信先に送るか
+
+- どのストリームをどの送信先に送るか
 
 #### VM Insights DCR
 
@@ -1079,15 +1107,18 @@ VM Insights DCRの詳細定義をしてる。
 **構成要素**：
 
 1. **performanceCounters**：パフォーマンスカウンターの収集
-   - `samplingFrequencyInSeconds = 60`：60秒ごとにサンプリング
-   - `counterSpecifiers`：詳細メトリクス
+
+- `samplingFrequencyInSeconds = 60`：60秒ごとにサンプリング
+- `counterSpecifiers`：詳細メトリクス
 
 2. **extensions**：DependencyAgent拡張機能
-   - VMの依存関係とネットワーク接続を追跡
+
+- VMの依存関係とネットワーク接続を追跡
 
 3. **dataFlows**：2つのストリーム
-   - `Microsoft-InsightsMetrics`：パフォーマンスメトリクス
-   - `Microsoft-ServiceMap`：サービスマップデータ
+
+- `Microsoft-InsightsMetrics`：パフォーマンスメトリクス
+- `Microsoft-ServiceMap`：サービスマップデータ
 
 #### Defender for SQL DCR
 
@@ -1165,18 +1196,21 @@ Defender for SQL DCRの詳細定義をしてる。
 **構成要素**：
 
 1. **extensions**：MicrosoftDefenderForSQL拡張機能
-   - SQL Serverのセキュリティイベントを収集
+
+- SQL Serverのセキュリティイベントを収集
 
 2. **streams**：6種類のデータストリーム
-   - `DefenderForSqlAlerts`：セキュリティアラート
-   - `DefenderForSqlLogins`：ログインイベント
-   - `DefenderForSqlTelemetry`：テレメトリデータ
-   - `DefenderForSqlScanEvents`：脆弱性スキャンイベント
-   - `DefenderForSqlScanResults`：スキャン結果
-   - `SqlAtpStatus-DefenderForSql`：Advanced Threat Protectionステータス
+
+- `DefenderForSqlAlerts`：セキュリティアラート
+- `DefenderForSqlLogins`：ログインイベント
+- `DefenderForSqlTelemetry`：テレメトリデータ
+- `DefenderForSqlScanEvents`：脆弱性スキャンイベント
+- `DefenderForSqlScanResults`：スキャン結果
+- `SqlAtpStatus-DefenderForSql`：Advanced Threat Protectionステータス
 
 3. **extensionSettings**：SQLクエリ収集の有効化
-   - セキュリティ研究用にSQLクエリを収集するかどうか
+
+- セキュリティ研究用にSQLクエリを収集するかどうか
 
 #### DCRのマージ
 
@@ -1508,14 +1542,21 @@ output "user_assigned_identity_ids" {
 platform-landing-zone.auto.tfvars
 ↓
 management_resource_settings = {
-  location                     = "japaneast"
-  log_analytics_workspace_name = "law-management-japaneast"
-  resource_group_name          = "rg-management"
-  user_assigned_managed_identities = { ama = { name = "id-ama-japaneast" } }
-  data_collection_rules = { change_tracking = { ... }, ... }
+  location = "$${starter_location_01}"
+  log_analytics_workspace_name = "$${log_analytics_workspace_name}"
+  resource_group_name = "$${management_resource_group_name}"
+  data_collection_rules = { ... $${dcr_xxx_name} ... }
+  user_assigned_managed_identities = { ama = { name = "$${ama_user_assigned_managed_identity_name}" } }
 }
 ↓
+config-templatingモジュール（$${...}を実際の値に置換）
+↓
 locals.tf（locals.management_resource_settings作成）
+  location = "japaneast"
+  log_analytics_workspace_name = "law-management-japaneast"
+  resource_group_name = "rg-management-japaneast"
+  data_collection_rules = { change_tracking = { name = "dcr-change-tracking-japaneast" }, ... }
+  user_assigned_managed_identities = { ama = { name = "id-ama-japaneast" } }
 ↓
 main.management.tf
   module "management_resources" {
@@ -1528,6 +1569,7 @@ modules/management_resources/main.tf
     source  = "Azure/avm-ptn-alz-management/azurerm"
     version = "0.9.0"
     location = var.management_resource_settings.location
+    log_analytics_workspace_name = coalesce(var.management_resource_settings.log_analytics_workspace_name, "...")
     ...（約25個のパラメータ）
   }
 ↓
@@ -1552,14 +1594,13 @@ Azure/avm-ptn-alz-management/azurerm v0.9.0
         └── local.data_collection_rules（3つをマージ）
 ↓
 作成されるリソース：
-  - rg-management（Resource Group）
+  - rg-management-japaneast（Resource Group）
   - law-management-japaneast（Log Analytics Workspace）
-  - dcr-change-tracking（Change Tracking DCR）
-  - dcr-vm-insights（VM Insights DCR）
-  - dcr-defender-sql（Defender for SQL DCR）
+  - dcr-change-tracking-japaneast（Change Tracking DCR）
+  - dcr-vm-insights-japaneast（VM Insights DCR）
+  - dcr-defender-sql-japaneast（Defender for SQL DCR）
   - id-ama-japaneast（User Assigned Managed Identity）
   - OMSGallery/ContainerInsights（Log Analytics Solution）
-  - OMSGallery/VMInsights（Log Analytics Solution）
 ↓
 outputs.tf（アウトプット）
   - log_analytics_workspace.id
@@ -1577,13 +1618,14 @@ outputs.tf（アウトプット）
 
 **全体の流れ**：
 
-1. **設定ファイル**：`platform-landing-zone.auto.tfvars`で設定
-2. **ローカル変数**：`locals.tf`で展開
-3. **モジュール呼び出し**：`main.management.tf`からローカルモジュール呼び出し
-4. **ローカルモジュール**：`modules/management_resources/`から公式モジュール呼び出し
-5. **公式モジュール**：`Azure/avm-ptn-alz-management`で実リソース作成
-6. **アウトプット**：作成したリソースIDをアウトプット
-7. **ポリシー連携**：ポリシーのデフォルト値に埋め込み
+1. **設定ファイル**：`platform-landing-zone.auto.tfvars`で`$${変数名}`形式で設定
+2. **変数置換**：`config-templating`モジュールが`$${...}`を実際の値に置換
+3. **ローカル変数**：`locals.tf`で`local.management_resource_settings`作成
+4. **モジュール呼び出し**：`main.management.tf`からローカルモジュール呼び出し
+5. **ローカルモジュール**：`modules/management_resources/`から公式モジュール呼び出し
+6. **公式モジュール**：`Azure/avm-ptn-alz-management`で実リソース作成
+7. **アウトプット**：作成したリソースIDをアウトプット
+8. **ポリシー連携**：ポリシーのデフォルト値に埋め込み
 
 ---
 
@@ -1593,9 +1635,9 @@ outputs.tf（アウトプット）
 
 ```hcl title="90日保管に変更"
 management_resource_settings = {
-  location = "japaneast"
-  log_analytics_workspace_name = "law-management-japaneast"
-  resource_group_name = "rg-management"
+  location = "$${starter_location_01}"
+  log_analytics_workspace_name = "$${log_analytics_workspace_name}"
+  resource_group_name = "$${management_resource_group_name}"
   
   log_analytics_workspace_retention_in_days = 90  # ←追加
   
@@ -1615,16 +1657,16 @@ management_resource_settings = {
 
 ```hcl title="Defender for SQLを無効化"
 management_resource_settings = {
-  location = "japaneast"
-  log_analytics_workspace_name = "law-management-japaneast"
-  resource_group_name = "rg-management"
+  location = "$${starter_location_01}"
+  log_analytics_workspace_name = "$${log_analytics_workspace_name}"
+  resource_group_name = "$${management_resource_group_name}"
   
   data_collection_rules = {
-    change_tracking = { name = "dcr-change-tracking" }
-    vm_insights     = { name = "dcr-vm-insights" }
+    change_tracking = { name = "$${dcr_change_tracking_name}" }
+    vm_insights     = { name = "$${dcr_vm_insights_name}" }
     defender_sql    = {  # ←無効化
       enabled = false
-      name    = "dcr-defender-sql"
+      name    = "$${dcr_defender_sql_name}"
     }
   }
   
@@ -1636,73 +1678,36 @@ management_resource_settings = {
 
 Defender for SQLが不要な環境では無効化してコスト削減。
 
-### パターン3: 複数のManaged Identity
+### パターン3: カスタム名前の設定
 
-```hcl title="複数のManaged Identityを作成"
-management_resource_settings = {
-  location = "japaneast"
-  log_analytics_workspace_name = "law-management-japaneast"
-  resource_group_name = "rg-management"
-  
-  user_assigned_managed_identities = {
-    ama = {
-      name = "id-ama-japaneast"
-    }
-    automation = {  # ←追加
-      name = "id-automation-japaneast"
-    }
+```hcl title="custom_replacements.namesに追加"
+custom_replacements = {
+  names = {
+    # 既存の変数
+    starter_location_01 = "japaneast"
+    
+    # 管理リソースの名前をカスタマイズ
+    log_analytics_workspace_name = "law-custom-prod-japaneast"
+    management_resource_group_name = "rg-custom-mgmt-prod"
+    dcr_change_tracking_name = "dcr-ct-prod-japaneast"
+    dcr_vm_insights_name = "dcr-vminsights-prod-japaneast"
+    dcr_defender_sql_name = "dcr-defendersql-prod-japaneast"
+    ama_user_assigned_managed_identity_name = "id-ama-prod-japaneast"
   }
-  
-  data_collection_rules = { ... }
-}
-```
-
-**使い分け**：
-
-- `ama`：Azure Monitor Agent用
-- `automation`：自動化スクリプト用
-
-**注意**：
-
-現在の`modules/management_resources/main.tf`は`user_assigned_managed_identities.ama`のみをサポートしてる。複数のManaged Identityを作成するには、公式モジュールのvariablesを調整する必要がある。
-
-### パターン4: BYO Log Analytics Workspace
-
-```hcl title="既存のLog Analyticsを使う"
-# 既存のLog Analytics WorkspaceのIDを指定
-module "management_resources" {
-  source  = "Azure/avm-ptn-alz-management/azurerm"
-  version = "0.9.0"
-  
-  location                                 = "japaneast"
-  resource_group_name                      = "rg-existing-management"
-  automation_account_name                  = "aa-management-japaneast"
-  
-  log_analytics_workspace_creation_enabled = false  # ←作成しない
-  log_analytics_workspace_id               = "/subscriptions/xxx/resourceGroups/rg-existing/providers/Microsoft.OperationalInsights/workspaces/law-existing"
-  resource_group_creation_enabled          = false  # ←既存RG使う
-  
-  data_collection_rules = { ... }
-  user_assigned_managed_identities = { ... }
 }
 ```
 
 **何してる？**
 
-既存のLog Analyticsワークスペースを使う（BYO: Bring Your Own）。
+環境やプロジェクトに応じた命名規則を適用してる。
 
-**使い道**：
-
-- 複数のLanding Zonesで1つのLog Analyticsを共有
-- 既存の運用環境に統合
-
-### パターン5: Sentinelの有効化
+### パターン4: Sentinelの有効化
 
 ```hcl title="Sentinelを有効化"
 management_resource_settings = {
-  location = "japaneast"
-  log_analytics_workspace_name = "law-management-japaneast"
-  resource_group_name = "rg-management"
+  location = "$${starter_location_01}"
+  log_analytics_workspace_name = "$${log_analytics_workspace_name}"
+  resource_group_name = "$${management_resource_group_name}"
   
   sentinel_onboarding = {  # ←追加
     name                         = "default"
@@ -1728,13 +1733,13 @@ Microsoft Sentinel（SIEM/SOAR）を有効化してる。
 約300円/GB（Log Analyticsへの取り込み料金とは別）
 ```
 
-### パターン6: タイムアウトのカスタマイズ
+### パターン5: タイムアウトのカスタマイズ
 
 ```hcl title="タイムアウトを延長"
 management_resource_settings = {
-  location = "japaneast"
-  log_analytics_workspace_name = "law-management-japaneast"
-  resource_group_name = "rg-management"
+  location = "$${starter_location_01}"
+  log_analytics_workspace_name = "$${log_analytics_workspace_name}"
+  resource_group_name = "$${management_resource_group_name}"
   
   timeouts = {  # ←追加
     data_collection_rule = {
@@ -1766,25 +1771,25 @@ management_resource_settings = {
 
 **管理リソースの役割**：
 
-1. **Log Analytics Workspace**：全てのログを集約する中央集約ストア
-2. **Data Collection Rules（DCR）**：どのログをどう収集するかのルール定義
-3. **Managed Identity**：パスワード不要のセキュアな認証
+- **Log Analytics Workspace**：全てのログを集約する中央集約ストア
+- **Data Collection Rules（DCR）**：どのログをどう収集するかのルール定義
+- **Managed Identity**：パスワード不要のセキュアな認証
 
 **モジュール構造**：
 
-- **設定ファイル**：`platform-landing-zone.auto.tfvars`で設定
+- **設定ファイル**：`platform-landing-zone.auto.tfvars`で`$${変数名}`形式で設定
+- **変数置換**：`config-templating`モジュールが`$${...}`を実際の値に置換
 - **ローカルモジュール**：`modules/management_resources/`でパラメータを整形・デフォルト値設定
 - **公式モジュール**：`Azure/avm-ptn-alz-management`で実リソース作成
 
 **重要なポイント**：
 
+- **変数置換システム**を使って環境ごとの値を管理
+- `$${starter_location_01}`のような多段階置換が可能
 - Log Analyticsは監視の基盤（すべてのログがここに集まる）
 - DCRで収集ルールをカスタマイズ（3種類：Change Tracking、VM Insights、Defender for SQL）
 - Managed IdentityでVMからLog Analyticsへのセキュアな接続
 - ポリシーと連携してVMへのAMA自動デプロイ
-- BYOパターンで既存リソースの活用可能
-
-
 
 ---
 
@@ -1793,7 +1798,7 @@ management_resource_settings = {
 理解度チェックです。
 
 ### 問題1
-Log Analytics Workspaceの主な役割は何ですか？
+`platform-landing-zone.auto.tfvars`で使われている`$${変数名}`形式の変数置換システムの目的は何ですか？
 
 ### 問題2
 Data Collection Rules（DCR）の3種類のタイプを挙げてください。
@@ -1802,33 +1807,49 @@ Data Collection Rules（DCR）の3種類のタイプを挙げてください。
 Managed Identityを使うメリットを2つ挙げてください。
 
 ### 問題4
-BYOパターンとは何ですか？どんな時に使いますか？
+`modules/management_resources/main.tf`で`coalesce`関数が使われている理由は何ですか？
 
 ---
 
 ## 練習問題の答え
 
 ### 答え1
-Log Analytics Workspaceの主な役割は、**すべてのログとメトリクスを集約する中央集約ストア**です。
+`$${変数名}`形式の変数置換システムの目的：
 
-具体的には：
-- VM、コンテナ、Azureサービスからのログを収集
-- 長期保存（デフォルト30日、最大730日）
-- KQLクエリで分析・検索
-- Azure MonitorやSentinelのデータソース
+**1. 環境ごとの値を一元管理**：
+
+- `custom_replacements.names`で環境ごとの値を定義
+- 設定ファイル全体で同じ変数を再利用
+- 環境切り替えが容易（`starter_location_01 = "japaneast"`を変えるだけ）
+
+**2. 多段階置換が可能**：
+
+```hcl
+log_analytics_workspace_name = "law-management-$${starter_location_01}"
+↓
+"law-management-japaneast"
+```
+
+**3. テンプレートとして再利用**：
+
+- 異なる環境（開発、本番）で同じテンプレートを使える
+- プロジェクトごとにカスタマイズしやすい
 
 ### 答え2
 Data Collection Rules（DCR）の3種類：
 
 **1. Change Tracking DCR**：
+
 - ファイル変更、レジストリ変更、サービス変更を監視
 - セキュリティ監査に使用
 
 **2. VM Insights DCR**：
+
 - CPU、メモリ、ディスク、ネットワークのパフォーマンス監視
 - プロセス・依存関係の可視化
 
 **3. Defender for SQL DCR**：
+
 - SQL Server on VMのセキュリティ監視
 - 脆弱性評価、脅威検出
 
@@ -1836,35 +1857,44 @@ Data Collection Rules（DCR）の3種類：
 Managed Identityのメリット：
 
 **1. パスワード不要**：
+
 - 認証情報をコードに埋め込まない
 - シークレット管理の手間が不要
 - 漏洩リスクがゼロ
 
 **2. 自動ローテーション**：
+
 - Azureが自動的に認証情報を更新
 - 証明書の期限切れの心配なし
 - セキュリティポリシーに準拠
 
 **3. きめ細かいアクセス制御**：
+
 - RBACで必要最小限の権限を付与
 - リソース単位で権限を制御
 
 ### 答え4
-BYO（Bring Your Own）パターンは、**既存のリソースを再利用するパターン**です。
+`coalesce`関数を使う理由：
 
-**例**：
+**デフォルト値の自動生成**：
+
 ```hcl
-log_analytics_workspace = {
-  enabled      = false  # 新規作成しない
-  existing_resource_id = "/subscriptions/.../workspaces/law-existing-001"
-}
+log_analytics_workspace_name = coalesce(
+  var.management_resource_settings.log_analytics_workspace_name,
+  "law-management-${var.management_resource_settings.location}"
+)
 ```
 
-**使う場面**：
-- 既存環境に追加デプロイする時
-- 他チームと共有リソースを使う時
-- コスト削減のため（新規作成を避ける）
-- 既存のログデータを維持したい時
+**動作**：
+
+- ユーザーが名前を指定してる場合：その名前を使う
+- ユーザーが名前を指定してない場合：自動生成（`law-management-japaneast`など）
+
+**メリット**：
+
+- 設定の簡略化（必須入力を減らせる）
+- 命名規則の統一（自動生成の名前が規則に従う）
+- 柔軟性（カスタム名も指定できる）
 
 ---
 
