Chapter 9-11: 実際のファイルに基づいて修正
- Chapter 9: platform-landing-zone.auto.tfvarsの内容を実際のファイルに合わせて修正（最小限の設定のみ）
- Chapter 9-11: すべてのファイルリンクと行番号参照を削除
- コードブロックタイトルを「（抜粋）」形式に統一
- Chapter 6-8と完全に同じ記述形式に統一

--- a/docs-site/docs/09_管理リソース.md
+++ b/docs-site/docs/09_管理リソース.md
@@ -13,78 +13,43 @@
 
 ---
 
-## Part 1: 設定ファイル（platform-landing-zone.auto.tfvars）の実際
+## Part 1: 設定ファイル（platform-landing-zone.auto.tfvars）
 
-ここからも**実際のファイル**を見ていくよ。
+ここからも実際のファイルを見ながらいこう。
 
 ### management_resource_settings
 
-[platform-landing-zone.auto.tfvars](../platform-landing-zone.auto.tfvars#L185-L250)を開いてみよう。185行目から250行目あたりに管理リソースの設定が書いてある。
+platform-landing-zone.auto.tfvarsを開いてみよう。management_resource_settingsの設定が書いてある。
 
-```hcl title="platform-landing-zone.auto.tfvars"
+```hcl title="platform-landing-zone.auto.tfvars（抜粋）"
 management_resource_settings = {
-  enabled = true
-
-  location = "$${starter_location_01}"
-
-  # Names for the management resources (optional)
-  automation_account_name      = null
+  enabled                      = true
+  location                     = "$${starter_location_01}"
   log_analytics_workspace_name = "$${log_analytics_workspace_name}"
   resource_group_name          = "$${management_resource_group_name}"
-
-  # Data collection rules (optional)
-  data_collection_rules = {
-    change_tracking = {
-      name = "$${dcr_change_tracking_name}"
-    }
-    vm_insights = {
-      name = "$${dcr_vm_insights_name}"
-    }
-    defender_sql = {
-      name = "$${dcr_defender_sql_name}"
-    }
-  }
-
-  # User Assigned Managed Identity for Azure Monitor Agent (optional)
+  
   user_assigned_managed_identities = {
     ama = {
       name = "$${ama_user_assigned_managed_identity_name}"
     }
   }
-
-  # Log Analytics Solutions (optional)
-  log_analytics_solution_plans = [
-    {
-      product   = "OMSGallery/ContainerInsights"
-      publisher = "Microsoft"
+  
+  data_collection_rules = {
+    change_tracking = {
+      name = "$${dcr_change_tracking_name}"
     }
-  ]
-
-  # Log Analytics Workspace settings (optional)
-  log_analytics_workspace_allow_resource_only_permissions    = true
-  log_analytics_workspace_cmk_for_query_forced               = null
-  log_analytics_workspace_daily_quota_gb                     = null
-  log_analytics_workspace_internet_ingestion_enabled         = true
-  log_analytics_workspace_internet_query_enabled             = true
-  log_analytics_workspace_local_authentication_enabled       = true
-  log_analytics_workspace_reservation_capacity_in_gb_per_day = null
-  log_analytics_workspace_retention_in_days                  = null
-  log_analytics_workspace_sku                                = null
-
-  # Sentinel (SIEM/SOAR) settings (optional)
-  sentinel_onboarding = null
-
-  # Tags (optional)
-  tags = null
-
-  # Timeouts (optional)
-  timeouts = null
+    defender_sql = {
+      name = "$${dcr_defender_sql_name}"
+    }
+    vm_insights = {
+      name = "$${dcr_vm_insights_name}"
+    }
+  }
 }
 ```
 
-**ここがポイント！**
 
-見てわかるように、ほとんどの値が**`$${変数名}`**という形式になってる。これは**変数置換システム**だよ。
+**すべて`$${変数名}`形式**なのが特徴。これは**変数置換システム**だよ。
 
 ### 変数置換システムの仕組み
 
@@ -125,11 +90,11 @@ locals.tf
 - `custom_replacements`を変えるだけで全体の設定を変更できる
 - テンプレートとして再利用しやすい
 
-### 実際の変数定義（custom_replacements.names）
+### 変数定義（custom_replacements.names）
 
-同じ[platform-landing-zone.auto.tfvars](../platform-landing-zone.auto.tfvars#L41-L80)ファイルの41行目から80行目あたりを見てみよう。
+同じplatform-landing-zone.auto.tfvarsファイルのcustom_replacements.namesを見てみよう。
 
-```hcl title="platform-landing-zone.auto.tfvars（custom_replacements.names）"
+```hcl title="platform-landing-zone.auto.tfvars（抜粋）"
 custom_replacements = {
   names = {
     # Management resources
@@ -175,11 +140,11 @@ config-templatingモジュールが全ての`$${...}`を再帰的に置換して
 
 ## Part 2: main.management.tfとモジュール構造
 
-次は、実際のモジュール呼び出しを見ていこう。
+次は、モジュール呼び出しを見ていこう。
 
 ### main.management.tfの実際
 
-[main.management.tf](../main.management.tf#L1-L50)を開いてみよう。
+main.management.tfを開いてみよう。
 
 ```hcl title="main.management.tf（抜粋）"
 module "management_resources" {
@@ -216,9 +181,9 @@ count = 0（モジュールスキップ）
 
 ### modules/management_resources/main.tfの実際
 
-[modules/management_resources/main.tf](../modules/management_resources/main.tf#L1-L30)を開いてみよう。
+modules/management_resources/main.tfを開いてみよう。
 
-```hcl title="modules/management_resources/main.tf"
+```hcl title="modules/management_resources/main.tf（抜粋）"
 module "management_resources" {
   source  = "Azure/avm-ptn-alz-management/azurerm"
   version = "0.9.0"
@@ -303,7 +268,7 @@ module "management_resources" {
 
 ### modules/management_resources/variables.tfの実際
 
-[modules/management_resources/variables.tf](../modules/management_resources/variables.tf#L1-L50)を開いてみよう。
+modules/management_resources/variables.tfを開いてみよう。
 
 ```hcl title="modules/management_resources/variables.tf（抜粋）"
 variable "enable_telemetry" {
@@ -470,8 +435,6 @@ DESCRIPTION
 - **ネストしたオブジェクト**：DCRやSentinelは複雑な構造
 
 ### modules/management_resources/outputs.tf
-
-[modules/management_resources/outputs.tf](../modules/management_resources/outputs.tf)
 
 ```hcl title="modules/management_resources/outputs.tf"
 output "management_resources" {
